syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "entities/app.proto";

message AppListRequest {

}

message AppListResponse {
  int32 code = 1;
  string message = 2;
  repeated App details = 3;
}